# wireworld

./: .gitignore  LICENSE  README.md  stack.yaml  wireworld.cabal
src/: Main.hs
