name:                wireworld
version:             0.1.0.0
synopsis:            Wireworld
homepage:            https://github.com/qsctr/wireworld
license:             MIT
author:              Bretton
build-type:          Simple
cabal-version:       >=1.10

executable wireworld
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
  ghc-options: -Wall -O2 -threaded
